Add moment and mongoDB

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "consola": "^2.15.3",
     "discord.js": "^13.1.0",
     "glob": "^7.1.7",
-    "mongoose": "^6.0.5",
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.6",
     "save": "^2.4.0",
     "ts-aspect": "^2.1.6",
     "weather-js": "^2.0.0"
